--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,8 @@ jobs:
 install:
   - python -m pip install -U setuptools wheel twine cibuildwheel
 script:
+  - python setup.py install
+  - pytest
   - python -m cibuildwheel --output-dir ./wheelhouse
   - python setup.py sdist -d ./wheelhouse
   - ls wheelhouse
