--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ jobs:
     - choco install python --version 3.8.5
     - export PATH="/c/Python38:/c/Python/Scripts:$PATH"
 install:
-  - python -m pip install -U setuptools wheel twine cibuildwheel
+  - python -m pip install -U setuptools wheel twine cibuildwheel pycodestyle scipy pytest
 script:
   - python setup.py install
   - pytest
